--- a/content/blog/2020-post-1.md
+++ b/content/blog/2020-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: Post 1
 date: 2020-02-03T18:07:00.780Z
-draft: true
+draft: false
 categories: random
 author: Incognito
 comments: true
